Closed
Bug 1353050
Opened 9 years ago
Closed 9 years ago
WasmSignalHandlers.cpp should use __sun instead of SOLARIS
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: petr.sumbera)
Details
Attachments
(1 file)
|
876 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20170323105023
Steps to reproduce:
JS build no longer defines SOLARIS macro (this disappeared somewhere between versions 45 and 52).
WasmSignalHandlers.cpp contains one condition where it's really needed and the condition should be probably changed to use pre-defined compiler macro (as it's used there for many other OSes).
| Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8854043 -
Flags: review?(luke)
Updated•9 years ago
|
Attachment #8854043 -
Flags: review?(luke) → review+
Component: Untriaged → JavaScript Engine
OS: Unspecified → Other
Product: Firefox → Core
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Updated•9 years ago
|
Assignee: nobody → petr.sumbera
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/054b05e1b8f7
WasmSignalHandlers.cpp should use __sun instead of SOLARIS. r=luke
Keywords: checkin-needed
Comment 3•9 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•