Bug 1353050 - WasmSignalHandlers.cpp should use __sun instead of SOLARIS. r=luke